-- TODO --
* Sort hats into classes within categories (all scout hats first, then solly
  , etc.)
* Sort crates by number, metal by use, etc.
* Odd level weapons on BBCode.

-- CHANGELOG --

3.7.2011
  - Added check for Genuine items (and Community and Valve and Self-Made)...
  - Added Dirty/Clean check for UHHH, Voodoo Juju, Spine-Chilling Skull.
  - Added Hero's Hachimaki and Genuine quality check for hats.
  - Gifted tag for UHHH, Skull, Juju.
  - Crates now arranged alphabetically.
  - Fix: promo weapons now caught by "only show dupes" option in BBCode.

3.3.2011
  - Fixed a bug with primary and secondary slot tokens being classified
  as weapons. They have "item_slot" = "primary" and "secondary"...
  - Added preliminary about page.

3.2.2011
  - Set up subversion. :D
  - Hacked all day, got the Metal Maker implementation done! Statistics could 
  use some work, as well as layout...
  - Did a little hack on metal_output.css that fixes the weird pixel offset on
  the right side of screens... hopefully I can investigate and figure this out.

2.24.2011
  - Fixed bug on Unusual hats not coming first in precedence.
  - Fixed CSS bug on signin form, still needs alignment work (maybe padding 
  0 on the input form?)

2.23.2011
  - First major code push.
  - Categorization of hats/weapons done.
  - Unusual hat lookups done.
  - Metal Maker form done.